查看反馈url调整，添加下载json功能 添加查看答题页面Handler

--- a/templates/ans_output.html
+++ b/templates/ans_output.html
@@ -34,7 +34,7 @@
 
         <main class="container">
             <h1>答题情况汇总</h1>
-            <p style="text-align: center">共有{{ total_num }}条答案反馈，点击下载json文件：<a href="/static/answers.json">答案文件</a></p>
+            <p style="text-align: center">共有{{ total_num }}条答案反馈，点击下载json文件：<a href="/statics/answers.json">答案文件</a></p>
             {% for x in answer_data %}
             <div class="col-12">
                 <p>
