--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -32,7 +32,7 @@
     </nav>
     <main class="container">
     <h1>反馈信息</h1>
-    <p style="text-align: center">共有{{ total_num }}条反馈信息</p>
+    <p style="text-align: center">共有{{ total_num }}条反馈信息，<a href="/statics/feedback.json">点此下载文件</a></p>
     <div class="row">
     {% for user_id,problem_id,feedback in feedbacks  %}
 
