答题页面更新（未完善）

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -41,6 +41,7 @@
                 问题编号：<span>{{ problem_id }}</span><span>&nbsp;</span>
                 用户编号：<span>{{ user_id }}</span><span>&nbsp;</span>
             </p>
+            <p><a href="/getanswer?problem_id={{ problem_id }}&user_id={{ user_id }}">查看答题</a></p>
             <p>反馈信息：<span>{{ feedback }}</span></p>
 
             </div>
