--- a/templates/ans_output.html
+++ b/templates/ans_output.html
@@ -32,14 +32,14 @@
         <main class="container">
             <h1>答题情况汇总</h1>
             <p style="text-align: center">共有{{ total_num }}条答案反馈，点击下载json文件：<a href="/statics/answers.json">答案文件</a></p>
-            {% for x in answer_data %}
+            {% for x in usr_data %}
                 <div class="col-12">
                     <p>
                         问题编号：<span>{{ x['pid'] }}</span><span>&nbsp;</span>
                         用户名称：<span>{{ x['name'] }}</span><span>&nbsp;</span>
                         所用时间：<span>{{ x['time'] }}</span>秒<span>&nbsp;</span>
                     </p>
-                    <p>给出答案：<span>{{ x['pid'] }}</span></p>
+                    <p>给出答案：<span>{{ x['old_char_col_lost'] }}</span></p>
                 </div>
             {% end %}
         </main>
