--- a/templates/answer.html
+++ b/templates/answer.html
@@ -33,156 +33,29 @@
     </nav>
     <main class="container" role="main">
         <p style="text-align: center; font-size: larger">题目编号：{{ problem_id }}，标注者编号：{{ user_id }}&nbsp;<a href="/outputf">返回</a></p>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="jumbotron">
+                    <p >反馈信息：{{ feedback }}</p>
+                </div>
+            </div>
             <div class="col-sm-12">
                 <div class="jumbotron" id="problem_board">
                     <div class="list-unstyled question" height="100px" id="" name="">
                         <div class="question_title">
                             <div id="question_content"></div>
                             <div id="div_toop"></div>
-
                         </div>
 
 
 
 
                     </div>
-                    <div id="test_answer">
-                </div>
                 </div>
             </div>
+        </div>
         </main>
-        <div class="col-sm-8">
-        </div>
-        <div class="col-sm-4" id="three-button">
-            <!-- <button class="btn btn-warning col-5" id="refresh_problem">
-                跳过本题
-            </button> -->
-            <button class="btn btn-info col-5" data-target="#myModal3" data-toggle="modal" id="create_feedback">
-                提交反馈
-            </button>
-            <button class="btn btn-primary col-5" id="lastQuestion">
-                上一题
-            </button>
-            <button class="btn btn-danger col-5 " id="nextQuestion">
-                下一题
-            </button>
-            <button class="btn btn-success col-5 float-right" data-target="#myModal" data-toggle="modal" id="submitQuestions">
-                提交答案
-            </button>
-        </div>
     </body>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="panel panel-primary">
-                <div class="panel-heading" id="closeCard">
 
-                </div>
-                <div class="panel-heading" id="openCard">
-
-                </div>
-                <div id="answerCard">
-                    <div class="panel-body form-horizontal">
-                        <ul class="list-unstyled">
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- </div>
-              </div> -->
-        </div>
-    </div>
-    <br>
-    </br>
-    <!-- 模态框（Modal） -->
-    <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal" role="dialog" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button aria-hidden="true" class="close" data-dismiss="modal" type="button">
-                        ×
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        请确认提交
-                    </h4>
-                </div>
-                <div class="modal-body" id="submitTip" style="font-size: 24px">
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-primary" data-dismiss="modal" id="confirmSubmit" type="button">
-                        确认提交(y)
-                    </button>
-                    <button class="btn btn-default" id="cancleSubmit" type="button">
-                        取消(n)
-                    </button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-    <!-- 模态框（Modal） -->
-    <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal2" role="dialog" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button aria-hidden="true" class="close" data-dismiss="modal" type="button">
-                        ×
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        提交成功
-                    </h4>
-                </div>
-                <div class="modal-body" id="submitTip" style="font-size: 24px">
-                    是否进行下一组？
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-primary" data-dismiss="modal" id="refresh" type="button">
-                        下一组(y)
-                    </button>
-                    <button class="btn btn-default" id="returnToIndex" type="button">
-                        返回首页(n)
-                    </button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
-    <!-- 模态框（Modal） -->
-    <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal3" role="dialog" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button aria-hidden="true" class="close" data-dismiss="modal" type="button">
-                        ×
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        反馈
-                    </h4>
-                </div>
-                <div class="modal-body" id="submitTip" style="font-size: 24px">
-
-                            <input id="other_error" type="text">
-                            </input>
-                        </br>
-                    </br>
-                </div>
-                <div class="modal-footer">
-    <button class="btn btn-default" data-dismiss="modal" type="button">
-        取消
-    </button>
-    <button class="btn btn-primary" id="post_feedback" type="button">
-        提交
-    </button>
-</div>
-            </div>
-        </div>
-    </div>
 </html>
-
-<!-- /.modal-content -->
-<!-- /.modal-dialog -->
-<!-- /.modal -->
 <input id="q_data" type="hidden" value="{{ problem_content }}"/>
