Function: href added, but getAnswerHandler need to be fixed

--- a/templates/ans_output.html
+++ b/templates/ans_output.html
@@ -59,6 +59,7 @@
                             <span>“否”</span>
                         {% end %}
                     </p>
+                    <p><a href="/getanswer?problem_id={{ x['pid'] }}&user_id={{ x['uid'] }}">查看答题</a></p>
                 </div>
             {% end %}
         </main>
